reactapp: fixed scrollbar overflow

--- a/neuro_arcade/reactapp/src/styles/App.module.css
+++ b/neuro_arcade/reactapp/src/styles/App.module.css
@@ -1,14 +1,11 @@
 .MainBlock {
     position: relative;
-    margin: 3em 3em 0;
-    width: calc(100% - 6em);
-    height: calc(100% - 3em);
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
     overflow-y: auto;
-    max-height: calc(100dvh - 9em);
     .Content {
         width: 40em;
         padding: 0 2em;
@@ -49,6 +46,14 @@
     position: relative;
     display: none;
     height: 7em;
+}
+
+.MainBlock#big {
+    max-height: calc(100dvh - 13.5em);
+}
+
+.MainBlock#small {
+    max-height: calc(100dvh - 9em);
 }
 
 @media (max-width: 75em) {
